--- a/Deals/dollordeals_terms.html
+++ b/Deals/dollordeals_terms.html
@@ -1,9 +1,9 @@
-<h2>Welcome to Dollor Deals</h2>
-<p>These terms and conditions outline the rules and regulations for the use of Dollor Deals's Website.</p> <br />
-<span style="text-transform: capitalize;"> Dollor Deals</span> is located at:<br />
-<address>Kakkanad , Kochi<br />Kerala - 682030, India<br />
+<h2>Welcome to Dollar Deals</h2>
+<p>These terms and conditions outline the rules and regulations for the use of Dollar Deals's Website.</p> <br />
+<span style="text-transform: capitalize;"> Dollar Deals</span> is located at:<br />
+<address>PO Box: 200318, Bin Al Sheikh Building<br />Abu Hamour, Doha, Qatar<br />
 </address>
-<p>By accessing this website we assume you accept these terms and conditions in full. Do not continue to use Dollor Deals's website
+<p>By accessing this website we assume you accept these terms and conditions in full. Do not continue to use Dollar Deals's website
 if you do not accept all of the terms and conditions stated on this page.</p>
 <p>The following terminology applies to these Terms and Conditions, Privacy Statement and Disclaimer Notice
 and any or all Agreements: “Client”, “You” and “Your” refers to you, the person accessing this website
@@ -15,21 +15,21 @@ of a fixed duration, or any other means, for the express purpose of meeting the 
 of provision of the Company’s stated services/products, in accordance with and subject to, prevailing law
 of India. Any use of the above terminology or other words in the singular, plural,
 capitalisation and/or he/she or they, are taken as interchangeable and therefore as referring to same.</p><h2>Cookies</h2>
-<p>We employ the use of cookies. By using Dollor Deals's website you consent to the use of cookies
-in accordance with Dollor Deals’s privacy policy.</p><p>Most of the modern day interactive web sites
+<p>We employ the use of cookies. By using Dollar Deals's website you consent to the use of cookies
+in accordance with Dollar Deals’s privacy policy.</p><p>Most of the modern day interactive web sites
 use cookies to enable us to retrieve user details for each visit. Cookies are used in some areas of our site
 to enable the functionality of this area and ease of use for those people visiting. Some of our
 affiliate / advertising partners may also use cookies.</p><h2>License</h2>
-<p>Unless otherwise stated, Dollor Deals and/or it’s licensors own the intellectual property rights for
-all material on Dollor Deals. All intellectual property rights are reserved. You may view and/or print
-pages from https://www.dollordeals.com for your own personal use subject to restrictions set in these terms and conditions.</p>
+<p>Unless otherwise stated, Dollar Deals and/or it’s licensors own the intellectual property rights for
+all material on Dollar Deals. All intellectual property rights are reserved. You may view and/or print
+pages from https://www.godollardeals.com for your own personal use subject to restrictions set in these terms and conditions.</p>
 <p>You must not:</p>
 <ol>
-    <li>Republish material from https://www.dollordeals.com</li>
-    <li>Sell, rent or sub-license material from https://www.dollordeals.com</li>
-    <li>Reproduce, duplicate or copy material from https://www.dollordeals.com</li>
+    <li>Republish material from https://www.godollardeals.com</li>
+    <li>Sell, rent or sub-license material from https://www.godollardeals.com</li>
+    <li>Reproduce, duplicate or copy material from https://www.godollardeals.com</li>
 </ol>
-<p>Redistribute content from Dollor Deals (unless content is specifically made for redistribution).</p>
+<p>Redistribute content from Dollar Deals (unless content is specifically made for redistribution).</p>
 <h2>Hyperlinking to our Content</h2>
 <ol>
     <li>The following organizations may link to our Web site without prior written approval:
@@ -77,7 +77,7 @@ of the linking party and it products or services; and (c) fits within the contex
 site.</p>
 
 <p>If you are among the organizations listed in paragraph 2 above and are interested in linking to our website,
-you must notify us by sending an e-mail to <a href="mailto:info@dollordeals.com" title="send an email to info@dollordeals.com">info@dollordeals.com</a>.
+you must notify us by sending an e-mail to <a href="mailto:info@godollardeals.com" title="send an email to info@godollardeals.com">info@godollardeals.com</a>.
 Please include your name, your organization name, contact information (such as a phone number and/or e-mail
 address) as well as the URL of your site, a list of any URLs from which you intend to link to our Web site,
 and a list of the URL(s) on our site to which you would like to link. Allow 2-3 weeks for a response.</p>
@@ -90,7 +90,7 @@ and a list of the URL(s) on our site to which you would like to link. Allow 2-3 
     <li>By use of any other description of our Web site or material being linked to that makes sense within the
         context and format of content on the linking party's site.</li>
 </ol>
-<p>No use of Dollor Deals’s logo or other artwork will be allowed for linking absent a trademark license
+<p>No use of Dollar Deals’s logo or other artwork will be allowed for linking absent a trademark license
 agreement.</p>
 <h2>Iframes</h2>
 <p>Without prior approval and express written permission, you may not create frames around our Web pages or
